--- a/index.html
+++ b/index.html
@@ -57,12 +57,18 @@
         <h2>About Me</h2>
         <p>
           Data Analyst | Python & Machine Learning Specialist <br /><br />
-          I am a results-driven Data Scientist with a strong foundation in statistical analysis, machine learning, and
-          data visualization. With hands-on experience in Python, SQL, and data modeling, I specialize in transforming raw data
-          into actionable insights that drive business growth and strategic decision-making. I have worked on end-to-end
-          data projects, including data preprocessing, model development, and deployment, and I’m passionate about
-          leveraging data to solve complex real-world problems. My approach blends analytical thinking with a deep
-          curiosity for patterns and trends, ensuring that every solution is both data-backed and business-relevant. I'm always
+          I am a results-driven Data Scientist with a strong foundation in statistical analysis, machine
+          learning, and
+          data visualization. With hands-on experience in Python, SQL, and data modeling, I specialize in
+          transforming raw data
+          into actionable insights that drive business growth and strategic decision-making. I have worked on
+          end-to-end
+          data projects, including data preprocessing, model development, and deployment, and I’m passionate
+          about
+          leveraging data to solve complex real-world problems. My approach blends analytical thinking with a
+          deep
+          curiosity for patterns and trends, ensuring that every solution is both data-backed and
+          business-relevant. I'm always
           eager to learn, collaborate, and contribute to data-driven innovation.
         </p>
       </div>
@@ -73,7 +79,8 @@
         <h2>Skills</h2>
         <ul class="skills-list">
           <li><span class="skill-label">Programming:</span> Python, C/C++, Java</li>
-          <li><span class="skill-label">Data Science:</span> Data Analysis, Data Wrangling, Machine Learning, AI</li>
+          <li><span class="skill-label">Data Science:</span> Data Analysis, Data Wrangling, Machine Learning,
+            AI</li>
           <li><span class="skill-label">Visualization:</span> Power BI, Data Visualization</li>
           <li><span class="skill-label">Database:</span> MySQL</li>
         </ul>
@@ -86,14 +93,18 @@
         <div class="projects-container">
           <div class="project">
             <h3>Personal Website</h3>
-            <p>A responsive portfolio website built with HTML, CSS and JavaScript to showcase my skills and projects.</p>
+            <p>A responsive portfolio website built with HTML, CSS and JavaScript to showcase my skills and
+              projects.</p>
           </div>
           <div class="project">
             <h3>Hotel Reservation</h3>
             <p><b>Description: </b>
-              The Hotel Reservation System is a Java-based desktop application that allows users to book hotel rooms and
-              manage reservation records using a connected database. Built using Java SE and JDBC, the project demonstrates
-              core concepts of Java programming, database connectivity, and CRUD operations. It is ideal for small-scale
+              The Hotel Reservation System is a Java-based desktop application that allows users to book
+              hotel rooms and
+              manage reservation records using a connected database. Built using Java SE and JDBC, the
+              project demonstrates
+              core concepts of Java programming, database connectivity, and CRUD operations. It is ideal
+              for small-scale
               hotel operations or as an academic demonstration of JDBC functionality.
             </p>
             <p>
@@ -109,16 +120,19 @@
       <div class="education-section">
         <h2>Education</h2>
         <ul>
-          <li><strong>BACHELOR OF COMPUTER APPLICATIONS</strong> <br> <b>Institution:</b> M.L.K. P.G. College, Balrampur
+          <li><strong>BACHELOR OF COMPUTER APPLICATIONS</strong> <br> <b>Institution:</b> M.L.K. P.G. College,
+            Balrampur
             <br>
             <b>Duration:</b> 2023 - till now 7.4/10
           </li>
           <hr>
-          <li><strong>INTERMEDIATE</strong> <br> <b>Institution:</b> S S I C Tetari Bazar, Siddharth Nagar (UP BOARD)<br>
+          <li><strong>INTERMEDIATE</strong> <br> <b>Institution:</b> S S I C Tetari Bazar, Siddharth Nagar (UP
+            BOARD)<br>
             <b>Duration:</b> 2022-23 - 64%
           </li>
           <hr>
-          <li><strong>HIGH SCHOOL</strong><br><b>Institution:</b> N H S S M T Uska Bazar, Siddharth Nagar (UP BOARD)<br>
+          <li><strong>HIGH SCHOOL</strong><br><b>Institution:</b> N H S S M T Uska Bazar, Siddharth Nagar (UP
+            BOARD)<br>
             <b>Duration:</b> 2020-21 - 86.5%
           </li>
         </ul>
@@ -151,10 +165,10 @@
       <p>&copy; 2023 Gaurav</p>
     </footer>
 
-  <script src="script.js">
-  </script>
-      
-  </body>
+    <script src="script.js">
+    </script>
+
+</body>
 </home>
 
 </html>
